<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:gravity="center"
        android:fontFamily="@font/bahij_thesansarabic_bold"
        android:textColor="@color/Midnight"
        android:textSize="14sp"
        />
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/whatsapp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/whatsapp"
            android:layout_weight="5"
            android:gravity="right|center"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:textColor="@color/Midnight"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/facebook" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/facebook"
            android:layout_weight="5"
            android:gravity="right|center"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:textColor="@color/Midnight"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/twitter" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/tiwteer"
            android:layout_weight="5"
            android:gravity="right|center"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:textColor="@color/Midnight"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/email" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/email2"
            android:layout_weight="5"
            android:gravity="right|center"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:textColor="@color/Midnight"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="31dp"
        android:layout_width="311dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/link_sahpe"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:gravity="center"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:text="@string/copy"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/copy"
            android:textColor="@color/Pelorous"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:text="@string/link"
            android:textColor="@color/Pelorous"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="17dp"
            app:srcCompat="@drawable/insert_link" />
    </LinearLayout>



</LinearLayout>