<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Snow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".About"
        android:background="@color/Snow">

    <LinearLayout
        android:id="@+id/linear"
        style="@style/Linearlayout_background"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:gravity="center|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/TextViwe_layout_name"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@id/view"/>
    </LinearLayout>

        <TextView
            android:id="@+id/editText_search"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_search"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:text="@string/Text_View_site"
            android:textColor="@color/Viking"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.84000003" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77"
            app:srcCompat="@drawable/world_blue" />

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/boxes"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="364dp">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_app_name"
                    android:textColor="@color/Viking"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_about_des1"
                    android:textColor="@color/Charcoal"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="364dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_about_des2"
                    android:textColor="@color/Charcoal"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="364dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_about_des3"
                    android:textColor="@color/Charcoal"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_about_country"
                    android:textColor="@color/Viking"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_about_des4"
                    android:textColor="@color/Charcoal"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="364dp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_about_des5"
                    android:textColor="@color/Charcoal"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="364dp">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bahij_thesansarabic_bold"
                    android:text="@string/Text_View_about_des6"
                    android:textColor="@color/Charcoal"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bahij_thesansarabic_bold"
                android:text="@string/Text_View_about_version"
                android:textColor="@color/Viking"
                android:textSize="14sp" />
        </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/about_bg"
        />


    <!--    <EditText-->
<!--        android:id="@+id/editText_search"-->
<!--        style="@style/EditText_Search"-->
<!--        android:layout_width="337dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="22dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:drawableEnd="@drawable/world_blue"-->
<!--        android:drawablePadding="18dp"-->
<!--        android:fontFamily="@font/bahij_thesansarabic_bold"-->
<!--        android:paddingEnd="87dp"-->
<!--        android:text="@string/Text_View_site"-->
<!--        android:textColor="@color/Viking"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/view"-->
<!--        app:layout_constraintStart_toStartOf="@id/view"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>