<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:background="@color/Snow">
    <View
        android:id="@+id/view"
        style="@style/Linearlayout_background"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/TextViwe_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/contactus"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextViwe_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/textView_text"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/contact" />

    <EditText
        android:id="@+id/editText_full_name"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="13dp"
        android:textColor="@color/Midnight"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/form"
        android:fontFamily="@font/bahij_thesansarabic_bold"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:textSize="12sp"
        android:textColorHint="@color/Black_Pearl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/Midnight"
        android:layout_marginEnd="13dp"
        android:background="@drawable/form"
        android:fontFamily="@font/bahij_thesansarabic_bold"
        android:hint="@string/email"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:textColorHint="@color/Black_Pearl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_full_name" />

    <EditText
        android:id="@+id/editText_messages"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_marginStart="13dp"
        android:textColor="@color/Midnight"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/form"
        android:fontFamily="@font/bahij_thesansarabic_bold"
        android:gravity="top|right"
        android:hint="@string/masseges"
        android:textSize="12sp"
        android:inputType="textMultiLine"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:paddingTop="18dp"
        android:imeOptions="normal"
        android:textColorHint="@color/Black_Pearl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_messages"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_form"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout9"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/messages" />

</androidx.constraintlayout.widget.ConstraintLayout>