<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/Snow"
    android:layout_marginEnd="11dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="11dp"
    android:elevation="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@color/Snow"
        >
        <ImageView
            android:id="@+id/company_img"
            android:layout_width="wrap_content"
            android:layout_height="99dp"
            android:background="@drawable/image_bg"
            android:layout_marginStart="25dp"
            app:srcCompat="@drawable/bank_alkleej"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/textView_jobtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="right"
            android:fontFamily="@font/bahij_thesansarabic_bold"
            android:text="@string/Text_View_describtion"
            android:textColor="@color/Charcoal"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@color/Snow"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_companyname"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right|center"
                android:layout_height="match_parent"
                android:fontFamily="@font/bahij_thesansarabic_bold"
                android:text="@string/Text_View_name_bank"
                android:textColor="@color/Viking"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/time_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/bahij_thesansarabic_bold"
                android:gravity="center"
                android:text="@string/Text_View_time_date"
                android:textColor="@color/Viking"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>